--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
-h1 {
-    color: tomato;
-}
+
+.gradient-background {
+    background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+    background-size: 180% 180%;
+    animation: gradient-animation 18s ease infinite;
+  }
